fix(home): fix partners logo wrap issue

--- a/src/stylesheets/main.css
+++ b/src/stylesheets/main.css
@@ -70,6 +70,10 @@ body {
   border-color: var(--calitp-yellow-4);
 }
 
+.min-w-0 {
+  min-width: 0;
+}
+
 .btn {
   --bs-btn-border-width: 2px;
 }
